# subtitle-vort-sandbox

./: .gitignore  film_to_srt.py  pyproject.toml  readme.md  simple_punct.py
