[project]
name = "subtitle-vort-sandbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeny Kosterin",email = "sparepart74@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13,<3.14"
dependencies = [
    "vosk (>=0.3.45,<0.4.0)",
    "srt (>=3.5.3,<4.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "noisereduce (>=3.0.3,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
